--- a/src/Easanles/AtletismoBundle/Resources/assets/css/index.css
+++ b/src/Easanles/AtletismoBundle/Resources/assets/css/index.css
@@ -181,5 +181,20 @@ h1, h2{
        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 6px #ce8483;
     }
     
+.grid-btn {
+   position: relative;
+   top: -65px;
+   opacity: 0.85;
+}
 
+.grid-comname {
+   position: absolute;
+   background-color: black;
+   padding: 0.5em;
+   color: white;
+   top: -5px;
+   left: 20px;
+   width: 85%;
+   opacity: 0.85;
+}
 
