--- a/src/Easanles/AtletismoBundle/Resources/views/Miscom/portada_miscom.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Miscom/portada_miscom.html.twig
@@ -45,23 +45,57 @@
    <h1 id="container_title" class="row page-header">Mis competiciones</h1>
    <div id="container_header" class="row">
       <div class="col-xs-7 col-sm-6 col-md-5">
-         <select class="form-control" onChange="">
-            <option value="">Temporada 2015/16</option>
-            {#
+         <select class="form-control" onChange="changeTemp(this.value)">
             {% for row in temporadas %}
-            <option value="{{ row.temp }}" {% if temp is defined %}{% if temp == row.temp %}selected{% endif %}{% endif %}>Temporada {{ row.temp }}/{{ (row.temp + 1)|slice(2, 2)}}</option>
+            <option value="{{ row.temp }}" {% if temp == row.temp %}selected{% endif %}>Temporada {{ row.temp }}/{{ (row.temp + 1)|slice(2, 2)}}</option>
             {% endfor %}
-            #}
          </select>
       </div>
       <div class="pull-right">
          <div class="btn-group" role="group" aria-label="Mostrar">
-            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> Cuadrícula</button>
-            <button type="button" class="btn btn-info active"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Lista</button>
+            <button id="btn-grid" type="button" class="btn btn-info active" onClick="toggleView('grid')"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> Cuadrícula</button>
+            <button id="btn-list" type="button" class="btn btn-default" onClick="toggleView('list')"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Lista</button>
          </div>
       </div>
    </div>
-   <div id="coms-list" class="row">
+   <div id="coms-grid" class="row">
+      {% for com in coms %}
+         <div class="col-xs-6 col-sm-4 col-md-3">
+            {% if com.cartel is not null %}
+            <a href="{{ path('users_ver_competicion', {'id': com.sid})}}"><img src="{{ vich_uploader_asset(com, 'cartelFile', 'Easanles\\AtletismoBundle\\Entity\\Competicion') }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/></a>
+            {% else %}
+               {% image '@EasanlesAtletismoBundle/Resources/assets/img/sincartel.jpg' %}
+               <a href="{{ path('users_ver_competicion', {'id': com.sid})}}"><img src="{{ asset_url }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/></a>
+               {% endimage %}
+               <h5 class="grid-comname">{{ com.nombre }}</h5>
+            {% endif %}
+            {% if com.fecha <= hoy %}
+               <a type="button" class="btn btn-lg btn-default btn-block grid-btn" href="{% if app.user is not null and is_granted('ROLE_ADMIN') %}{{ path('pantalla_resultados', {"com": com.sid}) }}{% else %}{{ path('users_pantalla_resultados', {"com": com.sid}) }}{% endif %}"><span class="visible-xs">Resultados</span><span class="hidden-xs">Ver resultados</span></a>
+            {% elseif com.inscrito == true %}
+               {% if com.esOficial == false %}
+                  {% if com.esInscrib == false %}
+                     <button type="button" class="btn btn-lg btn-default btn-block grid-btn" disabled>Inscrito</button>
+                  {% else %}
+                     {% if com.numpruebas == 1 %}
+                        <a type="button" class="btn btn-lg btn-primary btn-block grid-btn" href="#">Desinscribirse</a>
+                     {% else %}
+                        <a type="button" class="btn btn-lg btn-primary btn-block grid-btn" href="#"><span class="visible-xs">Modificar ins.</span><span class="hidden-xs">Modificar inscripción</span></a>
+                     {% endif %}
+                  {% endif %}
+               {% else %}
+                  <a type="button" class="btn btn-lg primary btn-block grid-btn" href="#"><span class="visible-xs">Ver ins.</span><span class="hidden-xs">Ver inscripción</span></a>
+               {% endif %}
+            {% elseif com.esOficial == true %}
+               <button type="button" class="btn btn-lg btn-default btn-block grid-btn" disabled>Competición oficial</button>
+            {% elseif com.esInscrib == true %}
+               <a type="button" class="btn btn-lg btn-primary btn-block grid-btn" href="#">Inscribirse</a>
+            {% else %}
+               <button type="button" class="btn btn-lg btn-default btn-block grid-btn" disabled><span class="visible-xs">Cerrado</span><span class="hidden-xs">Inscripciones cerradas</span></button>
+            {% endif %}
+         </div>
+      {% endfor %}
+   </div>
+   <div id="coms-list" class="row" style="display: none">
       {% for com in coms %}
          <div class="row">
             <div class="col-xs-3 col-sm-2 col-lg-offset-1">
@@ -76,7 +110,7 @@
             <div class="col-xs-6 col-sm-7 col-md-7 col-lg-5">
                <h3 class="hidden-xs">{{ com.nombre }}</h3>
                <h4 class="visible-xs">{{ com.nombre }}</h4>
-               <p>{% if com.fecha is null %} <em>Sin fecha</em> {% else %} {{ com.fecha|date('d/m/Y') }} {% endif %} - {{ com.sede }}</p>
+               <p>{% if com.fecha is null %} <em>Sin fecha</em> {% else %} {{ com.fecha|date('d/m/Y') }} {% endif %}{% if com.sede is not null %}{% if com.sede != "" %} - {{ com.sede }}{% endif %}{% endif %}</p>
                {% if com.web is not null %}<p><a href="{{ com.web }}">{{ com.web }}</a></p>{% endif %}
                <p class="visible-md visible-lg">
                   {{ com.desc|nl2br }}
@@ -92,35 +126,38 @@
                {% endif %}
                {% if com.fecha <= hoy %}
                   <p class="text-center">Finalizada</p>
-                  <a type="button" class="btn btn-default btn-block" href="#">Ver resultados</a>
+                  <a type="button" class="btn btn-default btn-block" href="{% if app.user is not null and is_granted('ROLE_ADMIN') %}{{ path('pantalla_resultados', {"com": com.sid}) }}{% else %}{{ path('users_pantalla_resultados', {"com": com.sid}) }}{% endif %}"><span class="visible-xs">Resultados</span><span class="hidden-xs">Ver resultados</span></a>
                {% elseif com.inscrito == true %}
                   <p class="text-center text-success">Inscrito</p>
                   {% if com.esOficial == false %}
-                     {% if com.numpruebas == 1 %}
-                     <a type="button" class="btn btn-default btn-block" href="#">Desinscribirse</a>
+                     {% if com.esInscrib == false %}
+                        <p class="text-center text-muted"><span class="visible-xs">Cerrado</span><span class="hidden-xs">Inscripciones cerradas</span></p>
                      {% else %}
-                     <a type="button" class="btn btn-default btn-block" href="#">Modificar inscripción</a>
+                        {% if com.numpruebas == 1 %}
+                           <a type="button" class="btn btn-default btn-block" href="#">Desinscribirse</a>
+                        {% else %}
+                           <a type="button" class="btn btn-default btn-block" href="#"><span class="visible-xs">Modificar ins.</span><span class="hidden-xs">Modificar inscripción</span></a>
+                        {% endif %}
                      {% endif %}
                   {% else %}
-                     <a type="button" class="btn btn-default btn-block" href="#">Ver inscripción</a>
+                     <a type="button" class="btn btn-default btn-block" href="#"><span class="visible-xs">Ver ins.</span><span class="hidden-xs">Ver inscripción</span></a>
                   {% endif %}
                {% elseif com.esOficial == true %}
                   <p class="text-center text-info">Solicite inscripción al coordinador del club</p>
-               {% elseif com.esInscrib %}
+               {% elseif com.esInscrib == true %}
                   <p class="text-center text-success">Inscripciones abiertas</p>
                   <a type="button" class="btn btn-primary btn-block" href="#">Inscribirse</a>
                {% else %}
-                  <p class="text-center text-muted">Inscripciones cerradas</p>
+                  <p class="text-center text-muted"><span class="visible-xs">Cerrado</span><span class="hidden-xs">Inscripciones cerradas</span></p>
                {% endif %}
             </div>
          </div>
       {% endfor %}
    </div>
-   <div id="coms-grid" class="row">
-   </div>
 
 {% endblock %}
 
 {% block js %}
+   <script src="{{ asset('bundles/atletismo/js/user.js') }}"></script>
 {% endblock %}
 
