--- a/src/Easanles/AtletismoBundle/Resources/assets/css/index.css
+++ b/src/Easanles/AtletismoBundle/Resources/assets/css/index.css
@@ -198,3 +198,18 @@ h1, h2{
    opacity: 0.85;
 }
 
+.list-row {
+   padding: 0.5em;
+   margin: 0.5em;
+   background-color: #f5f5f5;
+   border-radius: 4px;
+}
+
+.list-row-hoy {
+   padding: 0.5em;
+   margin: 0.5em;
+   background-color: #d9edf7;
+   border: #31708f 1px solid;
+   border-radius: 4px;
+}
+
